--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="css/estilos.css">
@@ -15,26 +16,344 @@
 
 <body>
     <header class="p-3 text-bg-dark">
-        <div class="container ">
-           
-            <div class="row text-left">
-                <div class="logo col-6  align-self-center">
-                    <a href="#"><img src="img/APLogo-20-20.png" alt="Argentina programa Logo"></a>
-                </div>
-                <div class="redes-sociales col-4  align-self-center">
-                    <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                    <a href="#" class="github"><i class="bi bi-github"></i></a>
+        <nav class=".navbar-brand">
+            <div class="container">
+                <div class="row ">
+                    <div class="logo col-sm-3 col-12 align-self-center text-center">
+                        <a href="#"><img src="img/APLogo-20-20.png" alt="Argentina programa Logo"></a>
+                    </div>
+                    <div class="redes-sociales col-sm-7 col-6 align-self-center text-center text-sm-end">
+                        <a href="#" class="instagram mx-2"><i class="bi bi-instagram"></i></a>
+                        <a href="#" class="twitter mx-2"><i class="bi bi-twitter"></i></a>
+                        <a href="#" class="github mx-2"><i class="bi bi-github"></i></a>
+
+                    </div>
+                    <div class="login col-sm-2 col-6 align-self-center text-sm-end">
+                        <button type="button" class="btn btn-outline-light my-5">Login</button>
+                    </div>
 
                 </div>
-                <div class="login col-2 align-self-center">
-                    <button type="button" class="btn btn-outline-light">Login</button>
+            </div>
+        </nav>
+    </header>
+    <!-- #Acerca -->
+    <section class="main">
+        <div class="container">
+            <div class="row">
+                <div class="align-self-center">
+                    <div class="foto">
+                        <img src="img/ruben.jpg" alt="Ruben Peña" width="115"
+                            class="border border-info border-opacity-10 border-3 rounded-4">
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <H1 class="H2 text-white" style="--bs-text-opacity: .8">Ruben Peña</H1>
+                        </div>
+                    </div>
+                    <H4 class="H4 text-white" style="--bs-text-opacity: .8">Desarrollador web full stack Junior</H4>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-9 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.Mollitia,
+                    perferendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,perferendis.
+                </div>
+                <div class="col-3 align-self-center text-end crud">
+                    <a href="#"><i class="bi bi-pencil"></i></a>
+                    <a href="#"><i class="bi bi-trash3"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- #Experiencia -->
+    <section class="expe mt-4">
+        <div class="container caja">
+            <div class="row">
+                <div class="col-11 tit">
+                    <H4>Experiencia</H4>
+                </div> 
+                <div class="col-1 align-self-center text-center crud">
+                    <a href="#"><i class="bi bi-plus-square"></i></a>
+                </div>
+                <div class="col-9">
+                    <p class="h5 mt-3">Lorem, ipsum dolor.</p>
+                    <p class="h6">1900-1900</p>
+                    <p class="descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate</p>
+                </div>
+                <div class="col-3 align-self-center text-end crud">
+                    <a href="#"><i class="bi bi-pencil"></i></a>
+                    <a href="#"><i class="bi bi-trash3"></i></a>
+                </div>
+
+
+                <div class="col-9">
+                    <p class="h5 mt-3">Lorem, ipsum dolor.</p>
+                    <p class="h6">1900-1900</p>
+                    <p class="descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate</p>
+                </div>
+                <div class="col-3 align-self-center text-end crud">
+                    <a href="#"><i class="bi bi-pencil"></i></a>
+                    <a href="#"><i class="bi bi-trash3"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- #Educacion -->
+    <section class="educa mt-4">
+        <div class="container caja">
+            <div class="col-12 tit">
+                <H4>Educación</H4>
+            </div>
+            <div class="row">
+                <div class="col-9">
+                    <p class="h5 mt-3">Lorem, ipsum dolor.</p>
+                    <p class="h6">1900-1900</p>
+                    <p class="descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate</p>
+                </div>
+                <div class="col-3 align-self-center text-end crud">
+                    <a href="#"><i class="bi bi-pencil"></i></a>
+                    <a href="#"><i class="bi bi-trash3"></i></a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-9">
+                    <p class="h5 mt-3">Lorem, ipsum dolor.</p>
+                    <p class="h6">1900-1900</p>
+                    <p class="descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate</p>
+                </div>
+                <div class="col-3 align-self-center text-end crud">
+                    <a href="#"><i class="bi bi-pencil"></i></a>
+                    <a href="#"><i class="bi bi-trash3"></i></a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-9">
+                    <p class="h5 mt-3">Lorem, ipsum dolor.</p>
+                    <p class="h6">1900-1900</p>
+                    <p class="descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate</p>
+                </div>
+                <div class="col-3 align-self-center text-end crud">
+                    <a href="#"><i class="bi bi-pencil"></i></a>
+                    <a href="#"><i class="bi bi-trash3"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- skills-->
+    <section class="skills mt-4">
+        <div class="container caja">
+            <div class="row justify-content-around">
+                <div class="col-12 tit">
+                    <H4>Hard and soft skills</H4>
+                </div>
+                <div class="unskill mt-4">
+                    <div class="outer">
+                        <div class="inner">                           
+                            <div id="nivel">65%</div>                          
+                        </div>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="300px" height="300px">
+                        <defs>
+                            <linearGradient id="GradientColor">
+                                <stop offset="0%" stop-color="#e91e63" />
+                                <stop offset="100%" stop-color="#673ab7" />
+                            </linearGradient>
+                        </defs>
+                        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+                    </svg>
+
+                </div>
+                <div class="unskill mt-4">
+                    <div class="outer">
+                        <div class="inner">
+                            <div id="nivel">65%</div>
+                        </div>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                        <defs>
+                            <linearGradient id="GradientColor">
+                                <stop offset="0%" stop-color="#e91e63" />
+                                <stop offset="100%" stop-color="#673ab7" />
+                            </linearGradient>
+                        </defs>
+                        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+                    </svg>
+                </div>
+                <div class="unskill mt-4">
+                    <div class="outer">
+                        <div class="inner">
+                            <div id="nivel">65%</div>
+                        </div>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                        <defs>
+                            <linearGradient id="GradientColor">
+                                <stop offset="0%" stop-color="#e91e63" />
+                                <stop offset="100%" stop-color="#673ab7" />
+                            </linearGradient>
+                        </defs>
+                        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+                    </svg>
+                </div>
+                <div class="unskill mt-4">
+                    <div class="outer">
+                        <div class="inner">
+                            <div id="nivel">65%</div>
+                        </div>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                        <defs>
+                            <linearGradient id="GradientColor">
+                                <stop offset="0%" stop-color="#e91e63" />
+                                <stop offset="100%" stop-color="#673ab7" />
+                            </linearGradient>
+                        </defs>
+                        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+                    </svg>
+                </div>
+                <div class="col-12 col-lg-6 unskill mt-4">
+                    <div class="outer">
+                        <div class="inner">
+                            <div id="nivel">65%</div>
+                        </div>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                        <defs>
+                            <linearGradient id="GradientColor">
+                                <stop offset="0%" stop-color="#e91e63" />
+                                <stop offset="100%" stop-color="#673ab7" />
+                            </linearGradient>
+                        </defs>
+                        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+                    </svg>
                 </div>
 
             </div>
         </div>
-       
+    </section>
+    <!-- #Desarrollos -->
+    <section class="desar mt-4">
+        <div class="container caja">
+            <div class="row justify-content-around">
+                <div class="col-9 tit">
+                    <H4>Desarrollos</H4>
+                </div>
+                <div class="col-3 align-self-center text-end crud">
+                    <a href="#"><i class="bi bi-pencil"></i></a>
+                    <a href="#"><i class="bi bi-trash3"></i></a>
+                </div>
+            </div>
+            <div class="row justify-content-around">
+                <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
+                    <div class="contenedor">
+                        <div class="thumber">
+                            <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
+                        </div>
+                        <div class="info">
+                            <h2 class="titulo"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit.</a></h2>
+                            <p class="extracto">Maecenas dapibus dui in mi convallis ornare. Maecenas enim
+                                nulla,
+                                porta sit amet sem eu, vehicula sagittis ex. Nullam consectetur quam nuon.</p>
+                            <div class="categorias">
+                                <a href="#">HTML</a>
+                                <a href="#">CSS</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
+                    <div class="contenedor">
+                        <div class="thumber">
+                            <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
+                        </div>
+                        <div class="info">
+                            <h2 class="titulo"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit.</a></h2>
+                            <p class="extracto">Maecenas dapibus dui in mi convallis ornare. Maecenas enim
+                                nulla,
+                                porta sit amet sem eu, vehicula sagittis ex. Nullam consectetur quam nuon.</p>
+                            <div class="categorias">
+                                <a href="#">HTML</a>
+                                <a href="#">CSS</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
+                    <div class="contenedor">
+                        <div class="thumber">
+                            <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
+                        </div>
+                        <div class="info">
+                            <h2 class="titulo"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit.</a></h2>
+                            <p class="extracto">Maecenas dapibus dui in mi convallis ornare. Maecenas enim
+                                nulla,
+                                porta sit amet sem eu, vehicula sagittis ex. Nullam consectetur quam nuon.</p>
+                            <div class="categorias">
+                                <a href="#">HTML</a>
+                                <a href="#">CSS</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
+                    <div class="contenedor">
+                        <div class="thumber">
+                            <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
+                        </div>
+                        <div class="info">
+                            <h2 class="titulo"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit.</a></h2>
+                            <p class="extracto">Maecenas dapibus dui in mi convallis ornare. Maecenas enim
+                                nulla,
+                                porta sit amet sem eu, vehicula sagittis ex. Nullam consectetur quam nuon.</p>
+                            <div class="categorias">
+                                <a href="#">HTML</a>
+                                <a href="#">CSS</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
+                    <div class="contenedor">
+                        <div class="thumber">
+                            <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
+                        </div>
+                        <div class="info">
+                            <h2 class="titulo"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit.</a></h2>
+                            <p class="extracto">Maecenas dapibus dui in mi convallis ornare. Maecenas enim
+                                nulla,
+                                porta sit amet sem eu, vehicula sagittis ex. Nullam consectetur quam nuon.</p>
+                            <div class="categorias">
+                                <a href="#">HTML</a>
+                                <a href="#">CSS</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+    </section>
+    <script>
+        let numero = document.getElementById("nivel");
+        let contador = 0;
+        setInterval(() => {
+            if (contador == 65) {
+                clearInterval();
+            } else {
+                contador++;
+                numero.innerHTML = contador + "%";
+            }
 
-    </header>
+        }, 20);
+    </script>
 </body>
+<footer>
+    <br><br><br><br>
+</footer>
