Final con links

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
             <div class="container">
                 <div class="row ">
                     <div class="logo col-sm-3 col-12 align-self-center text-center">
-                        <a href="#"><img src="img/APLogo-20-20.png" alt="Argentina programa Logo"></a>
+                        <a href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa" target="_blank">
+                            <img src="./Img/APLogo-20-20.png"  alt="Argentina programa Logo"></a>
                     </div>
                     <div class="redes-sociales col-sm-7 col-6 align-self-center text-center text-sm-end">
-                        <a href="#" class="instagram mx-2"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="twitter mx-2"><i class="bi bi-twitter"></i></a>
-                        <a href="#" class="github mx-2"><i class="bi bi-github"></i></a>
-
+                        <a href="https://www.instagram.com/ruben_fisu/?hl=es"  target="_blank" class="instagram mx-2"><i class="bi bi-instagram"></i></a>
+                        <a href="https://mobile.twitter.com/lelumilmau"  target="_blank" class="twitter mx-2"><i class="bi bi-twitter"></i></a>
+                        <a href="https://github.com/rubenpena64.html"  target="_blank" class="github mx-2"><i class="bi bi-github"></i></a>
+    
                     </div>
                     <div class="login col-sm-2 col-6 align-self-center text-sm-end">
                         <button type="button" class="btn btn-outline-light my-5">Login</button>
@@ -56,8 +57,7 @@
             </div>
 
             <div class="row">
-                <div class="col-9 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.Mollitia,
-                    perferendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,perferendis.
+                <div class="col-9 text-white">Texto que se editará dinamicamente cuando el proyecto esté terminado
                 </div>
                 <div class="col-3 align-self-center text-end crud">
                     <a href="#"><i class="bi bi-pencil"></i></a>
@@ -77,20 +77,19 @@
                     <a href="#"><i class="bi bi-plus-square"></i></a>
                 </div>
                 <div class="col-9">
-                    <p class="h5 mt-3">Lorem, ipsum dolor.</p>
+                    <p class="h5 mt-3">Texto editable</p>
                     <p class="h6">1900-1900</p>
-                    <p class="descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate</p>
+                    <p class="descrip">Texto que se editará dinámicamente</p>
                 </div>
                 <div class="col-3 align-self-center text-end crud">
                     <a href="#"><i class="bi bi-pencil"></i></a>
                     <a href="#"><i class="bi bi-trash3"></i></a>
                 </div>
 
-
                 <div class="col-9">
-                    <p class="h5 mt-3">Lorem, ipsum dolor.</p>
+                    <p class="h5 mt-3">Texto editable</p>
                     <p class="h6">1900-1900</p>
-                    <p class="descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate</p>
+                    <p class="descrip">Texto que se editará dinámicamente</p>
                 </div>
                 <div class="col-3 align-self-center text-end crud">
                     <a href="#"><i class="bi bi-pencil"></i></a>
@@ -113,9 +112,9 @@
                 </div>
 
                 <div class="col-9">
-                    <p class="h5 mt-3">Lorem, ipsum dolor.</p>
+                    <p class="h5 mt-3">Texto editable</p>
                     <p class="h6">1900-1900</p>
-                    <p class="descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate</p>
+                    <p class="descrip">Texto que se editará dinámicamente</p>
                 </div>
                 <div class="col-3 align-self-center text-end crud">
                     <a href="#"><i class="bi bi-pencil"></i></a>
@@ -124,9 +123,9 @@
             </div>
             <div class="row">
                 <div class="col-9">
-                    <p class="h5 mt-3">Lorem, ipsum dolor.</p>
+                    <p class="h5 mt-3">Texto editable</p>
                     <p class="h6">1900-1900</p>
-                    <p class="descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate</p>
+                    <p class="descrip">Texto que se editará dinámicamente</p>
                 </div>
                 <div class="col-3 align-self-center text-end crud">
                     <a href="#"><i class="bi bi-pencil"></i></a>
@@ -135,9 +134,9 @@
             </div>
             <div class="row">
                 <div class="col-9">
-                    <p class="h5 mt-3">Lorem, ipsum dolor.</p>
+                    <p class="h5 mt-3">Texto editable</p>
                     <p class="h6">1900-1900</p>
-                    <p class="descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate</p>
+                    <p class="descrip">Texto que se editará dinámicamente</p>
                 </div>
                 <div class="col-3 align-self-center text-end crud">
                     <a href="#"><i class="bi bi-pencil"></i></a>
@@ -211,7 +210,7 @@
                 <div class="unskill mt-4">
                     <div class="outer">
                         <div class="inner">
-                            <div class="skill"><span class="nivel">10</span>%<br>Java</div>
+                            <div class="skill"><span class="nivel">45</span>%<br>Java</div>
                         </div>
                     </div>
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
@@ -252,55 +251,30 @@
             </div>            
             <div class="row justify-content-around">
                   <!----------------un desarrollo------------------>
-                <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
+                  <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
                     <div class="contenedor">
                         <div class="thumber">
                             <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
                         </div>
                         <div class="info">
-                            <h2 class="titulo"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit.</a></h2>
-                            <p class="extracto">Maecenas dapibus dui in mi convallis ornare. Maecenas enim
-                                nulla,
-                                porta sit amet sem eu, vehicula sagittis ex. Nullam consectetur quam nuon.</p>
+                            <h2 class="titulo"><a href="#">Titulo del proyecto</a></h2>
+                            <p class="extracto">Descripción del proyecto junto con las tecnologias usadas</p>
                             <div class="col-3 align-self-center text-end crud2">
                                 <a href="#"><i class="bi bi-pencil"></i></a>
                                 <a href="#"><i class="bi bi-trash3"></i></a>
-                            </div>
+                            </div>>
                         </div>
                     </div>
                 </div>
                  <!----------------un desarrollo------------------>
-                <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
+                 <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
                     <div class="contenedor">
                         <div class="thumber">
                             <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
                         </div>
                         <div class="info">
-                            <h2 class="titulo"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit.</a></h2>
-                            <p class="extracto">Maecenas dapibus dui in mi convallis ornare. Maecenas enim
-                                nulla,
-                                porta sit amet sem eu, vehicula sagittis ex. Nullam consectetur quam nuon.</p>
-                            <div class="col-3 align-self-center text-end crud2">
-                                <a href="#"><i class="bi bi-pencil"></i></a>
-                                <a href="#"><i class="bi bi-trash3"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                  <!----------------un desarrollo------------------>
-                <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
-                    <div class="contenedor">
-                        <div class="thumber">
-                            <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
-                        </div>
-                        <div class="info">
-                            <h2 class="titulo"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit.</a></h2>
-                            <p class="extracto">Maecenas dapibus dui in mi convallis ornare. Maecenas enim
-                                nulla,
-                                porta sit amet sem eu, vehicula sagittis ex. Nullam consectetur quam nuon.</p>
+                            <h2 class="titulo"><a href="#">Titulo del proyecto</a></h2>
+                            <p class="extracto">Descripción del proyecto junto con las tecnologias usadas</p>
                             <div class="col-3 align-self-center text-end crud2">
                                 <a href="#"><i class="bi bi-pencil"></i></a>
                                 <a href="#"><i class="bi bi-trash3"></i></a>
@@ -315,41 +289,51 @@
                             <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
                         </div>
                         <div class="info">
-                            <h2 class="titulo"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit.</a></h2>
-                            <p class="extracto">Maecenas dapibus dui in mi convallis ornare. Maecenas enim
-                                nulla,
-                                porta sit amet sem eu, vehicula sagittis ex. Nullam consectetur quam nuon.</p>
+                            <h2 class="titulo"><a href="#">Titulo del proyecto</a></h2>
+                            <p class="extracto">Descripción del proyecto junto con las tecnologias usadas</p>
                             <div class="col-3 align-self-center text-end crud2">
                                 <a href="#"><i class="bi bi-pencil"></i></a>
                                 <a href="#"><i class="bi bi-trash3"></i></a>
-                            </div>
+                            </div>>
                         </div>
                     </div>
                 </div>
                   <!----------------un desarrollo------------------>
-                <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
+                  <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
                     <div class="contenedor">
                         <div class="thumber">
                             <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
                         </div>
                         <div class="info">
-                            <h2 class="titulo"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit.</a></h2>
-                            <p class="extracto">Maecenas dapibus dui in mi convallis ornare. Maecenas enim
-                                nulla,
-                                porta sit amet sem eu, vehicula sagittis ex. Nullam consectetur quam nuon.</p>
+                            <h2 class="titulo"><a href="#">Titulo del proyecto</a></h2>
+                            <p class="extracto">Descripción del proyecto junto con las tecnologias usadas</p>
                             <div class="col-3 align-self-center text-end crud2">
                                 <a href="#"><i class="bi bi-pencil"></i></a>
                                 <a href="#"><i class="bi bi-trash3"></i></a>
-                            </div>
+                            </div>>
                         </div>
                     </div>
                 </div>
-
+                  <!----------------un desarrollo------------------>
+                  <div class="col-10 col-sm-7 col-md-5 col-xl-4 post">
+                    <div class="contenedor">
+                        <div class="thumber">
+                            <a href="#"><img src="img/ex1.jpg" alt="" width="100%"></a>
+                        </div>
+                        <div class="info">
+                            <h2 class="titulo"><a href="#">Titulo del proyecto</a></h2>
+                            <p class="extracto">Descripción del proyecto junto con las tecnologias usadas</p>
+                            <div class="col-3 align-self-center text-end crud2">
+                                <a href="#"><i class="bi bi-pencil"></i></a>
+                                <a href="#"><i class="bi bi-trash3"></i></a>
+                            </div>>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+    <!-- JavaScript para que se dibuje el circulo de acurdo al porcentaje de conocimientos -->
     <script>
         const niveles = document.getElementsByClassName('nivel');
         const circulos = document.getElementsByClassName('circulos');
