--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>PorfolioFrontEnd</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Ruben Peña - Porfolio personal</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  </head>
 <body>
   <app-root></app-root>
 </body>
